--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="list">
-        <ul class="list-wrap">
+        <ul class="list-wrap clearfix">
             <li data-url="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/11c70c96529b6e6938567ec1aa0910e0.mp4" data-title="Redmi 10X系列发布会">
                 <div>
                     <img alt="Redmi 10X系列发布会" src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/101b19aca4bb489bcef0f503e44ec866.jpg?thumb=1&w=296&h=180&f=webp&q=90">
